src/snapshots/openapi_to_rust__test_helpers__discriminator_no_mapping.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone)]
pub enum Animal {
    Cat(Cat),
    Dog(Dog),
}
impl serde::Serialize for Animal {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        match self {
            Self::Cat(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(Cat),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                object
                    .insert(
                        "species".to_string(),
                        serde_json::Value::String("cat".to_string()),
                    );
                value.serialize(serializer)
            }
            Self::Dog(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(Dog),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                object
                    .insert(
                        "species".to_string(),
                        serde_json::Value::String("dog".to_string()),
                    );
                value.serialize(serializer)
            }
        }
    }
}
impl<'de> serde::Deserialize<'de> for Animal {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        let value = serde_json::Value::deserialize(deserializer)?;
        let discriminator = value
            .get("species")
            .and_then(serde_json::Value::as_str)
            .ok_or_else(|| serde::de::Error::custom(
                concat!("missing string discriminator `", "species", "`",),
            ))?
            .to_string();
        match discriminator.as_str() {
            "cat" => {
                serde_json::from_value::<Cat>(value)
                    .map(Self::Cat)
                    .map_err(serde::de::Error::custom)
            }
            "dog" => {
                serde_json::from_value::<Dog>(value)
                    .map(Self::Dog)
                    .map_err(serde::de::Error::custom)
            }
            other => {
                Err(
                    serde::de::Error::custom(
                        format!(
                            "unknown discriminator value `{other}` for `{}`", "species",
                        ),
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Dog {
    pub bark: bool,
    pub species: DogSpecies,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum DogSpecies {
    #[default]
    #[serde(rename = "dog")]
    Dog,
}
impl DogSpecies {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Dog => "dog",
        }
    }
}
impl ::std::fmt::Display for DogSpecies {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for DogSpecies {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Cat {
    pub meow: bool,
    pub species: CatSpecies,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum CatSpecies {
    #[default]
    #[serde(rename = "cat")]
    Cat,
}
impl CatSpecies {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Cat => "cat",
        }
    }
}
impl ::std::fmt::Display for CatSpecies {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for CatSpecies {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
