src/snapshots/openapi_to_rust__test_helpers__inline_enum_collision_nesting.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct PlanData {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub attributes: Option<PlanDataAttributes>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub id: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub r#type: Option<PlanDataTypePlans>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum PlanDataTypePlans {
    #[default]
    #[serde(rename = "plans")]
    Plans,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct PlanDataAttributes {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub specs: Option<PlanDataSpecs>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct PlanDataSpecs {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub drives: Option<Vec<PlanDataDrivesItem>>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct PlanDataDrivesItem {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub r#type: Option<PlanDataType>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum PlanDataType {
    #[default]
    #[serde(rename = "SSD")]
    Ssd,
    #[serde(rename = "HDD")]
    Hdd,
    #[serde(rename = "NVME")]
    Nvme,
}
